22년 2월 02일 1) bootstrap 사용하여 css 사용하여 index.html 과 TableResult01.html    내용 추가!

--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -22,5 +22,9 @@
         <button name="btn" type="submit" id="btnId">입력</button>
     </form>
 
+    <h2>전체 목록을 보려면 아래 버튼을 눌러주세요! </h2>
+    <form name="frm" action="/findAll" method="get">
+        <button type="submit" name="btn" id="btnId2">전체 목록 버튼</button>
+    </form>
 </body>
 </html>
