22년 2월 02일 2) Boarder Insert 추가!     -> update / delete 해보기!!

--- a/src/main/resources/templates/TableResult01.html
+++ b/src/main/resources/templates/TableResult01.html
@@ -7,24 +7,8 @@
 <!-- Bootstrap core CSS -->
 <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <style>
-        .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            user-select: none;
-        }
-
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-                font-size: 3.5rem;
-            }
-        }
-    </style>
-
-<!--    &lt;!&ndash; Custom styles for this template &ndash;&gt;-->
-<!--    <link href="/css/cheatsheet.css" rel="stylesheet">-->
+    <!-- Custom styles for this template -->
+    <link href="/css/cheatsheet.css" rel="stylesheet">
 </head>
 <body>
     <div class="bd-example">
@@ -58,8 +42,9 @@
             </tbody>
         </table>
     </div>
-<!--    <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>-->
 
-<!--    <script src="/js/cheatsheet.js"></script>-->
+    <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <script src="/js/cheatsheet.js"></script>
 </body>
 </html>
