--- a/src/main/resources/templates/boarder/boarderRegister.html
+++ b/src/main/resources/templates/boarder/boarderRegister.html
@@ -22,7 +22,7 @@
 
         <div>
             <div class="bd-example">
-                <form class="row g-3" name="frm" id="frm" action="/createUser" method="post">
+                <form class="row g-3" name="frm" id="frm" action="/boarder/createUser" method="post">
                     <div class="col-md-4">
                         <label for="name" class="form-label">이름</label>
                         <input class="form-control is-valid" id="name" name="name" type="text" placeholder="이름" required>
