--- a/src/main/resources/templates/boarder/boarderUpdateList.html
+++ b/src/main/resources/templates/boarder/boarderUpdateList.html
@@ -12,6 +12,11 @@
     <!-- Custom styles for this template -->
     <link href="/css/cheatsheet.css" rel="stylesheet">
 </head>
+<script>
+    function save(){
+        document.frm.submit();
+    }
+</script>
 <body>
 
 <article class="my-3" id="validation">
@@ -22,24 +27,24 @@
 
     <div>
         <div class="bd-example">
-            <form class="row g-3" name="frm" id="frm" action="/UpdateHYUser" method="post" >
+            <form class="row g-3" name="frm" id="frm" action="/boarder/UpdateHYUser11" method="post" >
                 <div class="col-md-4">
                     <label for="name" class="form-label">이름</label>
-                    <input class="form-control is-valid" id="name" name="name" type="text" th:value ="${name}" required>
+                    <input class="form-control is-valid" id="name" name="name" type="text" th:value ="${user.name}" required>
                     <div class="valid-feedback">
                         Looks good!
                     </div>
                 </div>
                 <div class="col-md-4">
                     <label for="addr" class="form-label">주소</label>
-                    <input type="text" class="form-control is-valid" id="addr" name="addr" th:value="${addr}" required>
+                    <input type="text" class="form-control is-valid" id="addr" name="addr" th:value="${user.addr}" required>
                     <div class="valid-feedback">
                         Looks good!
                     </div>
                 </div>
                 <div class="col-md-4">
                     <label for="phonenumber" class="form-label">전화번호</label>
-                    <input type="text" class="form-control is-valid" id="phonenumber" name="phonenumber" th:value="${phonenumber}" required>
+                    <input type="text" class="form-control is-valid" id="phonenumber" name="phonenumber" th:value="${user.phonenumber}" required>
                     <div class="valid-feedback">
                         Looks good!
                     </div>
