22년 2월 04일 Update 되긴 하는데.. 모르겠다 .. 주륵.. 휴우
우리 다크호스 둘이 고쳐줬다.. 휴우 ..

--- a/src/main/resources/templates/boarder/boarderList.html
+++ b/src/main/resources/templates/boarder/boarderList.html
@@ -32,7 +32,7 @@
 <form name="reqDeleteBoarder" action="/boarder/DeleteHYUser" method="post" >
     <input type="hidden" name="seq">
 </form>
-<form name="reqUpdateBoarder" action="/boarder/UpdateHYUser" method="post">
+<form name="reqUpdateBoarder" action="/boarder/UpdateHYUser" method="get">
     <input type="hidden" name="seq">
 </form>
     <div class="bd-example">
